Random ring spawn positions

--- a/cyber@avebury/Assets/Scripts/Minigame/Mainframe/Editor/CyberAvebury.Minigame.Mainframe.Editor.asmdef
+++ b/cyber@avebury/Assets/Scripts/Minigame/Mainframe/Editor/CyberAvebury.Minigame.Mainframe.Editor.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "CyberAvebury.Minigame.Mainframe",
+    "name": "CyberAvebury.Minigame.Mainframe.Editor",
     "rootNamespace": "CyberAvebury",
     "references": [
-        "GUID:13eb272cfd101264a97f9d9c56d27cc5"
+        "GUID:67bca5a3a0916e44fb4d1329b5b6a2b3"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
