--- a/cyber@avebury/Assets/Scripts/Minigames/CyberAvebury.Minigames.asmdef
+++ b/cyber@avebury/Assets/Scripts/Minigames/CyberAvebury.Minigames.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "CyberAvebury.Minigame",
+    "name": "CyberAvebury.Minigames",
     "rootNamespace": "CyberAvebury",
     "references": [],
     "includePlatforms": [],
