Animations for rings

--- a/cyber@avebury/Assets/Scripts/Minigames/Mainframe/Rings/CyberAvebury.Minigames.Mainframe.Rings.asmdef
+++ b/cyber@avebury/Assets/Scripts/Minigames/Mainframe/Rings/CyberAvebury.Minigames.Mainframe.Rings.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:13eb272cfd101264a97f9d9c56d27cc5",
         "GUID:67bca5a3a0916e44fb4d1329b5b6a2b3",
+        "GUID:e6d2fcfd5b5079d48bbf1a26013582ae",
         "GUID:a0429aaa7025e854582b056f8edf18a9"
     ],
     "includePlatforms": [],
