Effect on click node

--- a/cyber@avebury/Assets/Scripts/Map/Selection/CyberAvebury.Map.Selection.asmdef
+++ b/cyber@avebury/Assets/Scripts/Map/Selection/CyberAvebury.Map.Selection.asmdef
@@ -1,7 +1,8 @@
 {
-    "name": "CyberAvebury.Map.Interaction",
+    "name": "CyberAvebury.Map.Selection",
     "rootNamespace": "CyberAvebury",
     "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:37b55b6d548c1a546a5a29f4d5dc9315",
         "GUID:93f7b5b5efcb16047b2a158e785ef741",
         "GUID:13eb272cfd101264a97f9d9c56d27cc5",
