Added UI to show remaining score to clear Antivirus stage

--- a/cyber@avebury/Assets/Scripts/Minigames/Antivirus/CyberAvebury.Minigames.Antivirus.asmdef
+++ b/cyber@avebury/Assets/Scripts/Minigames/Antivirus/CyberAvebury.Minigames.Antivirus.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "CyberAvebury",
     "references": [
         "GUID:13eb272cfd101264a97f9d9c56d27cc5",
-        "GUID:58293e28e079a9644a08838808618da9"
+        "GUID:58293e28e079a9644a08838808618da9",
+        "GUID:d01693a1e4780644494c102fccad341a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
