--- a/cyber@avebury/Assets/Scripts/Map/CyberAvebury.Map.asmdef
+++ b/cyber@avebury/Assets/Scripts/Map/CyberAvebury.Map.asmdef
@@ -5,7 +5,8 @@
         "GUID:45a8948d779714135814fc726b8d219f",
         "GUID:55bc09f86ffdfec4a9f0f273194fa96a",
         "GUID:13eb272cfd101264a97f9d9c56d27cc5",
-        "GUID:94c53555a0088524b9930beba51709c2"
+        "GUID:94c53555a0088524b9930beba51709c2",
+        "GUID:e6d2fcfd5b5079d48bbf1a26013582ae"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
