--- a/cyber@avebury/Assets/Scripts/Dialogue/CyberAvebury.Dialogue.asmdef
+++ b/cyber@avebury/Assets/Scripts/Dialogue/CyberAvebury.Dialogue.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "CyberAvebury",
     "references": [
         "GUID:d01693a1e4780644494c102fccad341a",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:571e5101c2e9872458477a9157438114",
+        "GUID:6f1dfc0d24bf037498886aa258896537"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
