--- a/cyber@avebury/Assets/Scripts/Popup/CyberAvebury.Popup.asmdef
+++ b/cyber@avebury/Assets/Scripts/Popup/CyberAvebury.Popup.asmdef
@@ -2,7 +2,8 @@
     "name": "CyberAvebury.Popup",
     "rootNamespace": "CyberAvebury",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:571e5101c2e9872458477a9157438114"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
