Enemies now explode

--- a/cyber@avebury/Assets/Scripts/Explosion/CyberAvebury.Explosion.asmdef
+++ b/cyber@avebury/Assets/Scripts/Explosion/CyberAvebury.Explosion.asmdef
@@ -1,12 +1,8 @@
 {
-    "name": "CyberAvebury.Minigames.Antivirus.Enemy",
+    "name": "CyberAvebury.Explosion",
     "rootNamespace": "CyberAvebury",
     "references": [
-        "GUID:58293e28e079a9644a08838808618da9",
-        "GUID:6f1dfc0d24bf037498886aa258896537",
-        "GUID:a27cf28b5cd41974499d7d1c149bbb88",
-        "GUID:13eb272cfd101264a97f9d9c56d27cc5",
-        "GUID:39fcd9893de0cc74dbd3d6c8b4aa549a"
+        "GUID:d01693a1e4780644494c102fccad341a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
