--- a/cyber@avebury/Packages/manifest.json
+++ b/cyber@avebury/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "com.niantic.lightship.maps": "https://github.com/niantic-lightship/maps-upm.git",
-    "com.nianticlabs.lightship": "https://github.com/niantic-lightship/ardk-upm.git",
     "com.unity.adaptiveperformance.google.android": "5.1.3",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.feature.mobile": "1.0.0",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
