--- a/cyber@avebury/Assets/Scripts/Map/Selection/CyberAvebury.Map.Selection.asmdef
+++ b/cyber@avebury/Assets/Scripts/Map/Selection/CyberAvebury.Map.Selection.asmdef
@@ -6,7 +6,8 @@
         "GUID:37b55b6d548c1a546a5a29f4d5dc9315",
         "GUID:93f7b5b5efcb16047b2a158e785ef741",
         "GUID:13eb272cfd101264a97f9d9c56d27cc5",
-        "GUID:55bc09f86ffdfec4a9f0f273194fa96a"
+        "GUID:55bc09f86ffdfec4a9f0f273194fa96a",
+        "GUID:883eac9a214a9b24b9db5e7220a0e657"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
