--- a/cyber@avebury/Packages/manifest.json
+++ b/cyber@avebury/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.adaptiveperformance.google.android": "5.1.3",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.2",
