--- a/cyber@avebury/Assets/Scripts/Camera/CyberAvebury.Camera.asmdef
+++ b/cyber@avebury/Assets/Scripts/Camera/CyberAvebury.Camera.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "CyberAvebury.Camera",
     "rootNamespace": "CyberAvebury",
-    "references": [],
+    "references": [
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:93f7b5b5efcb16047b2a158e785ef741"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
